<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/aboutus_backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:background="#00000000"
        android:src="@drawable/ic_arrow_left" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"

        android:src="@drawable/awaazlogo" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/shadaw"
        android:text="@string/awaaz_name_with_slogan"
        android:textAlignment="center"
        android:layout_marginBottom="12sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="30sp"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/awaaz_about_us_des"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/outfi_bold"
        android:text="Address:"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="16sp"
        android:layout_marginLeft="30sp"
        android:text="@string/awaaz_about_us_address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/outfi_bold"
        android:text="Contact:"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="16sp"
        android:layout_marginLeft="30sp"
        android:text="@string/awaaz_about_us_number"/>

</LinearLayout>