<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/onboardinglayout_frame"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:background="@drawable/onboarding_square"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/onboardinglayout_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25sp"
            android:src="@drawable/first_image" />
    </FrameLayout>

    <TextView
        android:id="@+id/onboardinglayout_textHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/outfi_bold"
        android:textColor="@color/black"
        android:text="@string/first_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardinglayout_frame"/>

    <TextView
        android:id="@+id/onboardinglayout_textdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/black"
        android:text="@string/first_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_relativelayout"
        app:layout_constraintTop_toBottomOf="@+id/onboardinglayout_textHeading"/>

    <RelativeLayout
        android:id="@+id/onboarding_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="170sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/onboarding_getStartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:layout_marginTop="14sp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="7dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/awaaz_onboarding_startbutton_text"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/onboarding_nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="25sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/outfi_bold"
            android:drawableEnd="@drawable/ic_caret_right_fill"
            android:text="Next" />

        <Button
            android:id="@+id/onboarding_previousbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="25sp"
            android:background="#00000000"
            android:drawableLeft="@drawable/ic_caret_left_fill"
            android:fontFamily="@font/outfi_bold"
            android:text="Previous"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>